#231: Set Java version to 8 and add JNA dependency.